data/derived/comb/progs/unify/prog2620.ml.out
Characters 25-34:
  [(10 / 2), (8 mod 2)] :: listerine;;
                           ^^^^^^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type (int * int) list list
       Type int * int is not compatible with type (int * int) list 
